# yarp-device-ultrapython

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  DOCKER.md  OBSOLETE.md  README.md  SDSETUP.md  TESTING.md  USEFUL.md  script-video.sh
.github/workflows/: publish-docker.yml
clientScript/: script-dump.sh  script-video.sh
dockerfiles/: Dockerfile  README.md  entrypoint.sh
ini/: hiultra.ini  lowultra.ini
matlab/: FPS_check.m  Latency_check.m  image_mean.asv  image_mean.m
shorewall/: masq  policy  shorewall.conf
shorewell/: interfaces  ipmasquerade.sh  policy  zones
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  UltraPythonCli.cpp  UltraPythonCli.h  main.cpp
src/common/: CMakeLists.txt  common.cpp  common.h
src/devices/: CMakeLists.txt
src/devices/ultrapython/: CMakeLists.txt  InterfaceForCApi.h  Statistics.cpp  Statistics.h  USBcamera.cpp  USBcamera.h  UltraPythonCameraHelper.cpp  UltraPythonCameraHelper.h  UltraPythonCameraLogComponent.cpp  UltraPythonCameraLogComponent.h  UltraPythonDriver.cpp  UltraPythonDriver.h  UltraPythonDriverGeneric.cpp  UltraPythonDriverGeneric.h  V4L_camera.cpp  V4L_camera.h  list.cpp  list.h
src/devices/ultrapython/unittest/: CApiMock.h  CMakeLists.txt  CliMock.h  gtest_main.cc  testCli.cpp  testControlBrigthness.cpp  testControlContrast.cpp  testControlExposition.cpp  testControlGain.cpp  testDefalutOrNotUsedParam.cpp  testUltraPythonGeneral.cpp  testUltraPytonRunning.cpp
src/ui/: CMakeLists.txt  main.cpp  mainori.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: testScript.sh
ubuntu-files/capture/: CMakeLists.txt  PythonCameraHelper.cpp  PythonCameraHelper.h  v4l2_capture.c  v4l2_capture.cpp
ubuntu-files/config/: 01-netcfg.yaml  rc.local
ubuntu-files/ini/: ultra.ini
ubuntu-files/modules/: imgfusion.ko  load  packet32.ko  python1300.ko  unload  v4l2-fwnode.ko  videobuf2-dma-contig.ko  xilinx-cfa.ko  xilinx-demosaic.ko  xilinx-python1300-rxif.ko  xilinx-rgb2yuv.ko  xilinx-tpg.ko  xilinx-video.ko  xilinx-vip.ko  xilinx-vpss-csc.ko  xilinx-vtc.ko  xilinx_frmbuf.ko
ubuntu-files/modules/unusedModules/: gspca_main.ko  v4l2-tpg.ko  videobuf-core.ko  videobuf-dma-contig.ko  xilinx-axis-switch.ko  xilinx-cresample.ko  xilinx-vpss-scaler.ko  xilinx_dma.ko
ubuntu-files/system-boot/: boot.scr  system.dtb  uboot.env
ubuntu-files/yarp.local/: preliminary.sh
